# qsp-model-explorer

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: ui_and_internals.md
examples/tnbc/: NOTICE  README.md  explorer.toml  model_structure.json  priors.csv
examples/tnbc/cpp/qsp/ode/: ODE_system.cpp
examples/tnbc/resources/cpp/: drug_metadata.yaml  param_all.xml
examples/tnbc/scenarios/: baseline.yaml
src/qsp_model_explorer/: __init__.py  config.py  hill_deps.py  server.py  sources.py  submodel_medians.py
src/qsp_model_explorer/static/: index.html
